# elevenlabs-haystack

./: README.md  pyproject.toml
elevenlabs_haystack/: __init__.py  component.py
tests/: __init__.py  conftest.py  test_elevenlabs_haystack_init.py  test_elevenlabs_text_to_speech.py
