[tool.poetry]
name = "elevenlabs-haystack"
version = "0.4.2"
description = "ElevenLabs Text-to-Speech components for Haystack."
authors = ["Andy <andychert@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
elevenlabs-s3 = "^0.3.1"
haystack-ai = "^2.6.0"
pytest-dotenv = "^0.5.2"
numpy = [
    {version = "^1.21.0", python = "<3.9"},
    {version = "^1.26.0", python = ">=3.9"}
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
